# jp_citycode

./: Pipfile  README.md  convert.py  pyproject.toml  requirements.txt
data/: 20161010.json  20161010.tsv  20181001.json  20181001.tsv  20190501.tsv  20240101.json  20240101.tsv
